--- a/polars.ipynb
+++ b/polars.ipynb
@@ -2947,6 +2947,100 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Polars Expressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       ".pl-dataframe > thead > tr > th {\n",
+       "  text-align: right;\n",
+       "}\n",
+       "</style>\n",
+       "\n",
+       "<table border=\"1\" class=\"pl-dataframe\">\n",
+       "<small>shape: (3, 2)</small>\n",
+       "<thead>\n",
+       "<tr>\n",
+       "<th>\n",
+       "origin\n",
+       "</th>\n",
+       "<th>\n",
+       "counts\n",
+       "</th>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "str\n",
+       "</td>\n",
+       "<td>\n",
+       "u32\n",
+       "</td>\n",
+       "</tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "<tr>\n",
+       "<td>\n",
+       "&quot;EWR&quot;\n",
+       "</td>\n",
+       "<td>\n",
+       "120835\n",
+       "</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "&quot;JFK&quot;\n",
+       "</td>\n",
+       "<td>\n",
+       "111279\n",
+       "</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "&quot;LGA&quot;\n",
+       "</td>\n",
+       "<td>\n",
+       "104662\n",
+       "</td>\n",
+       "</tr>\n",
+       "</tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "shape: (3, 2)\n",
+       "┌────────┬────────┐\n",
+       "│ origin ┆ counts │\n",
+       "│ ---    ┆ ---    │\n",
+       "│ str    ┆ u32    │\n",
+       "╞════════╪════════╡\n",
+       "│ EWR    ┆ 120835 │\n",
+       "│ JFK    ┆ 111279 │\n",
+       "│ LGA    ┆ 104662 │\n",
+       "└────────┴────────┘"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flights['origin'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
